# gradient-motion-engine

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTORS.md  README.md  cuems_errors.h  mkdocs.yml
.cursor/plans/: v0.1.0_pr_production_prep_ad52923b.plan.md
.github/workflows/: docs.yml  tests.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
daemon/: GradientEngineApplication.cpp  GradientEngineApplication.h  logging.h  main.cpp
daemon/comms/: NngBusClient.cpp  NngBusClient.h  OscServer.cpp  OscServer.h
daemon/config/: ConfigurationManager.cpp  ConfigurationManager.h  version.h.in
debian/: changelog  control  copyright  rules
dev/: C++ Node-Level FadeEngine — Implementation Plan.md  C++ Node-Level GradientEngine — Implementation Plan.md  Resumen para Adrià — v2.md  analiza-todo-y-haz-whimsical-kahn.md  legal_notice.txt
dev/deploy_tests/: s007_osc_sender.cpp  s007_t034_smoke.sh  s007_t052_rate_limit.sh  s007_t063_multi_node.sh  s007_t065_avahi_resilience.sh
dev/deploy_tests/results/: s007_t034_smoke.txt  s007_t052_rate_limit.txt  s007_t063_multi_node.txt  s007_t065_avahi_resilience.txt
docs/: api.md  architecture.md  index.md
specs/001-phase0-scaffold/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-phase0-scaffold/checklists/: requirements.md
specs/002-gradient-curves/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-gradient-curves/checklists/: requirements.md
specs/002-gradient-curves/contracts/: curve-interface.md
specs/003-mtc-tick-source/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-mtc-tick-source/checklists/: requirements.md
specs/003-mtc-tick-source/contracts/: MtcTickSource.h
specs/004-adapt-mtc-tick-v2/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-adapt-mtc-tick-v2/checklists/: requirements.md
specs/004-adapt-mtc-tick-v2/contracts/: MtcTickSource.h
specs/005-nng-bus-client/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-nng-bus-client/checklists/: requirements.md
specs/005-nng-bus-client/contracts/: FadeCommand.h  LockFreeQueue.h  NngBusClient.h
specs/006-fade-registry-tick-loop/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-fade-registry-tick-loop/checklists/: requirements.md
specs/006-fade-registry-tick-loop/contracts/: fade-motion-api.md  fade-registry-api.md  gradient-engine-api.md  motion-registry-api.md  osc-sender-api.md
specs/006-fade-registry-tick-loop/post-plans/: motionregistry_refactor_1f153178.plan.md  supersede_start_value_inheritance_a307f2cd.plan.md
specs/007-osc-input-transport/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-osc-input-transport/checklists/: requirements.md
specs/007-osc-input-transport/contracts/: OscServer.h  gradient_osc.md  parseFadeOscCommand.h
specs/planning/: PHASE-H-HANDOFF-NOTES.md  T060-cuems-common-systemd-unit.md  Update for Adrià — both PRs merged  documentation-prompt.md
src/: CMakeLists.txt
src/engine/: ActiveFade.h  FadeRegistry.cpp  FadeRegistry.h  GradientEngine.cpp  GradientEngine.h  engine.cpp
src/gradient/: BezierCurve.cpp  BezierCurve.h  CrossfadePair.h  Curve.h  CurveFactory.cpp  CurveFactory.h  EaseInCurve.h  EaseOutCurve.h  LinearCurve.h  ResampledCurve.cpp  ResampledCurve.h  SCurve.h  ScaledCurve.h  SigmoidCurve.cpp  SigmoidCurve.h  gradient.cpp
src/motion/: EvalResult.h  FadeMotion.cpp  FadeMotion.h  IMotion.h  MotionFactory.cpp  MotionFactory.h  MotionRegistry.cpp  MotionRegistry.h  motion.cpp
src/osc/: OscSender.cpp  OscSender.h  osc.cpp
src/signal/: FadeCommand.cpp  FadeCommand.h  LockFreeQueue.h  StatusEmitRequest.h  parseFadeOscCommand.cpp  parseFadeOscCommand.h  signal.cpp
src/time/: MtcTickSource.cpp  MtcTickSource.h  time.cpp
tests/: CMakeLists.txt  bench_osc_latency.cpp  test_curves.cpp  test_fade_motion.cpp  test_fade_registry.cpp  test_fade_registry_bench.cpp  test_lockfree_queue.cpp  test_motion_registry.cpp  test_motion_registry_bench.cpp  test_mtc_tick_source.cpp  test_nng_integration.cpp  test_nng_parse.cpp  test_osc_parse.cpp  test_osc_server_integration.cpp
tests/bench_results/: osc_latency.txt
